--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '27.0.1'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "cn.com.zhjnc.cloudmusicxposed"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 8
-        versionName "v3.0"
+        versionCode 10
+        versionName "v3.2"
     }
     buildTypes {
         release {
@@ -22,11 +22,11 @@ android {
 }
 
 repositories {
-    jcenter();
+    jcenter()
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    provided 'de.robv.android.xposed:api:82'
-    compile 'com.google.code.gson:gson:2.2.4'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.google.code.gson:gson:2.8.4'
+    compileOnly 'de.robv.android.xposed:api:82'
 }
